--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -76,3 +76,52 @@ Footer
     line-height: 1.3;
     margin-bottom: 24px;
   }
+
+  .social {
+    font-size: 0;
+    padding-bottom: $spacing-unit*1.5;
+  }
+
+  .social-link {
+    display: inline-block;
+  }
+
+  .social-link + .social-link {
+    margin-left: $spacing-unit*2.5;
+  }
+
+  .social-link--vimeo {
+    width: 42px; height: 36px;
+    background: url(/images/vimeo.png) no-repeat;
+    background-size: 42px 36px;
+    @include retina {
+      background-image: url(/images/vimeo@2x.png);
+    }
+  }
+
+  .social-link--twitter {
+    width: 42px; height: 36px;
+    background: url(/images/twitter.png) no-repeat;
+    background-size: 42px 36px;
+    @include retina {
+      background-image: url(/images/twitter@2x.png);
+    }
+  }
+
+  .social-link--instagram {
+    width: 37px; height: 36px;
+    background: url(/images/instagram.png) no-repeat;
+    background-size: 37px 36px;
+    @include retina {
+      background-image: url(/images/instagram@2x.png);
+    }
+  }
+
+  .social-link--medium {
+    width: 45px; height: 34px;
+    background: url(/images/medium.png) no-repeat;
+    background-size: 45px 34px;
+    @include retina {
+      background-image: url(/images/medium@2x.png);
+    }
+  }
