--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,8 +41,8 @@ html
           a(href='https://instagram.com/brucewgalcock',target='_blank').social-link.social-link--instagram Instagram
           a(href='https://twitter.com/globalmechanic',target='_blank').social-link.social-link--twitter Twitter
           a(href='https://vimeo.com/globalmechanicmedia',target='_blank').social-link.social-link--vimeo Vimeo
-          a(href='https://medium.com/globalmechanicmedia',target='_blank').social-link.social-link--medium Medium
-          //- a(href='https://medium.com/globalmechanicmedia',target='_blank').social-link.social-link--pinterest Pinterest
+          a(href='https://medium.com/@brucewgalcock',target='_blank').social-link.social-link--medium Medium
+          //- a(href='https://www.pinterest.com/brucealcock7',target='_blank').social-link.social-link--pinterest Pinterest
         .other-companies
           p We're part of a group of companies:
           div 
