--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -29,6 +29,47 @@
 		color: #fff;
 		margin: 0;
 		padding: 0;
+		text-transform: uppercase;
+		line-height: 1;
+	}
+
+	h1 {
+		font-size: 24px;
+		@include phablet {
+	    	font-size: 36px;
+	  	}
+	  	@include desktop {
+	    	font-size: 48px;
+	  	}
+	  	@include big-desktop {
+	    	font-size: 74px;
+	  	}
+	}
+
+	h2 {
+		font-size: 18px;
+	  	@include phablet {
+	    	font-size: 24px;
+	  	}
+	  	@include desktop {
+	    	font-size: 30px;
+	  	}
+	  	@include big-desktop {
+	    	font-size: 46px;
+	  	}
+	}
+
+	h3 {
+		font-size: 14px;
+	  	@include phablet {
+	    	font-size: 18px;
+	  	}
+	  	@include desktop {
+	    	font-size: 24px;
+	  	}
+	  	@include big-desktop {
+	    	font-size: 38px;
+	  	}
 	}
 
 	p {
