--- a/public/bungusland/css/style.css
+++ b/public/bungusland/css/style.css
@@ -183,7 +183,6 @@ body {
 
   margin: 10px;
   line-height: initial;
-
 }
 
 #content h1 {
@@ -196,15 +195,7 @@ body {
 
 #modal {
 
-  /* 
-  background-image: url('TemplateData/video_close.png'); 
-  background-size: initial;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: right top; 
-  */
-
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.9);
   display: none;
   position: absolute;
 
@@ -217,6 +208,28 @@ body {
 
 }
 
+#content_close_btn {
+  cursor: pointer;
+  width: 10px;
+  height: 10px;
+  z-index: 20;
+  position: absolute;
+  right: 5px;
+  font-family: Arial;
+  font-size: 20px;
+}
+
+#overlay_logo {
+  width: 432px;
+  height: 240px;
+  background: url("../images/bungus_logo.png");
+  position: absolute;
+  z-index: 2;
+  top: 60px;
+  left: 60px;
+  cursor: pointer;
+  display: none;
+}
 /****************************************
   ==== VIDEO PANE
 ****************************************/
@@ -252,7 +265,6 @@ body {
 }
 
 .behind_the_scenes_content {
-  background-color: #9dbaab;
   width: 320px;
   height: 180px;
   margin: 15px 10px 5px 15px;
@@ -328,6 +340,7 @@ body {
   height: 100%;
   top: -84px;
   text-align: center;
+  display: flex;
 }
 
 .showcase_btn {
@@ -376,9 +389,25 @@ body {
   background-image: url('../images/showcase_arrow_prev.png');
 }
 
+#showcase_close_btn {
+  position: absolute;
+  right: -20px;
+  top: -30px;
+  font-family: Arial;
+  width: 10px;
+  height: 10px;
+  color: #eee;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 .behind_scenes_image {
   display: inline;
   text-align: center;
+}
+
+.vimeo_behind_scenes {
+  display: block;
 }
 
 .vimeo_video {
